; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_se.c_se200pci_WM8766_init.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_se.c_se200pci_WM8766_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ice1712 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ice1712*)* @se200pci_WM8766_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @se200pci_WM8766_init(%struct.snd_ice1712* %0) #0 {
  %2 = alloca %struct.snd_ice1712*, align 8
  store %struct.snd_ice1712* %0, %struct.snd_ice1712** %2, align 8
  %3 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %4 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %3, i32 31, i32 0)
  %5 = call i32 @udelay(i32 10)
  %6 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %7 = call i32 @se200pci_WM8766_set_volume(%struct.snd_ice1712* %6, i32 0, i32 0, i32 0)
  %8 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %9 = call i32 @se200pci_WM8766_set_volume(%struct.snd_ice1712* %8, i32 1, i32 0, i32 0)
  %10 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %11 = call i32 @se200pci_WM8766_set_volume(%struct.snd_ice1712* %10, i32 2, i32 0, i32 0)
  %12 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %13 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %12, i32 3, i32 34)
  %14 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %15 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %14, i32 10, i32 128)
  %16 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %17 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %16, i32 18, i32 0)
  %18 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %19 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %18, i32 21, i32 0)
  %20 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %21 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %20, i32 9, i32 0)
  %22 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %23 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %22, i32 2, i32 292)
  %24 = load %struct.snd_ice1712*, %struct.snd_ice1712** %2, align 8
  %25 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %24, i32 2, i32 288)
  ret void
}

declare dso_local i32 @se200pci_WM8766_write(%struct.snd_ice1712*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @se200pci_WM8766_set_volume(%struct.snd_ice1712*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
